--- a/package.json
+++ b/package.json
@@ -3,16 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@egjs/flicking": "~4.5.0",
+    "@egjs/react-flicking": "^4.5.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
+    "@types/leaflet": "^1.7.9",
     "@types/node": "^16.11.21",
+    "@types/node-sass": "^4.11.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
+    "buffer": "^6.0.3",
+    "classnames": "^2.3.1",
+    "crypto-browserify": "^3.12.0",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
+    "react-dropzone": "^12.0.4",
+    "react-leaflet": "^3.1.0",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
+    "recoil": "^0.5.2",
+    "sass": "^1.49.0",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
