--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
     "buffer": "^6.0.3",
+    "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "crypto-browserify": "^3.12.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-dropzone": "^12.0.4",
