--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
+    "events": "^3.3.0",
     "node-sass": "^7.0.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-csv": "^2.2.2",
@@ -29,19 +33,18 @@
     "react-leaflet": "^3.1.0",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "recoil": "^0.5.2",
     "sass": "^1.49.0",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.5.5",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -62,6 +65,13 @@
     ]
   },
   "devDependencies": {
-    "@types/react-csv": "^1.1.2"
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
+    "@types/crypto-js": "^4.1.1",
+    "@types/react-csv": "^1.1.2",
+    "@vitejs/plugin-react": "^2.1.0",
+    "vite": "^3.1.4",
+    "vite-plugin-svgr": "^2.2.1",
+    "vite-tsconfig-paths": "^3.5.1"
   }
 }
