--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 3001"
   },
   "eslintConfig": {
     "extends": [
