--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
     "buffer": "^6.0.3",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
+    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "events": "^3.3.0",
+    "express": "^4.18.1",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
     "node-sass": "^7.0.1",
+    "path": "^0.12.7",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
@@ -44,7 +52,8 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview --port 3001"
+    "preview": "vite preview --port 3001",
+    "serve": "set NODE_ENV=production&& node ./bin/www"
   },
   "eslintConfig": {
     "extends": [
@@ -67,7 +76,12 @@
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/crypto-js": "^4.1.1",
+    "@types/debug": "^4.1.7",
+    "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@types/react-csv": "^1.1.2",
     "@vitejs/plugin-react": "^2.1.0",
     "vite": "^3.1.4",
