--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dropzone": "^12.0.4",
     "react-leaflet": "^3.1.0",
     "react-player": "^2.9.0",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.2.1",
     "react-select": "^5.2.2",
     "recoil": "^0.5.2",
